# blue2devclass

./: .gitignore  CMakeLists.txt  README.md
src/: bit_ops.h  dev_class.h  main.cpp  parse_bitmask.cpp  remote_device.cpp  remote_device.h  scan.cpp  xml.cpp
